k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hermes
  namespace: hermes
  labels:
    app: hermes
    component: web
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: hermes-tls
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 3600
  ports:
  - name: http
    port: 8000
    targetPort: http
    protocol: TCP
  selector:
    app: hermes
    component: web
